tests/ui/type/type-check/cannot_infer_local_or_array.rs
fn main() {
    let x = []; //~ ERROR type annotations needed
}

// ferrocene-annotations: fls_xinykul167l
// Array Expressions
// ferrocene-annotations: fls_7bxv8lybxm18
// Identifier Patterns
// ferrocene-annotations: fls_lv7w7aalpwm5
// Type Inference
